still fixing alignment issue

--- a/components/contact/contact.scss
+++ b/components/contact/contact.scss
@@ -19,10 +19,15 @@
 
 	&__wrapper {
 		height: 100%;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+
+		@include respond(tab-port) {
+			width: 80%;
+		}
 
 		@include respond(tab-land) {
 			width: 50%;
@@ -46,7 +51,6 @@
 	&__form {
 		display: flex;
 		flex-direction: column;
-      align-items: center;
 		gap: 1.2rem;
 		margin-top: 2rem;
 		padding: 1.5rem;
